@@ -1,3 +1,15 @@
+2009-07-07 13:00 +0200  Rocco Rutte  <pdmef@gmx.net>  (376545d6909c)
+
+	* UPDATING, globals.h, init.h, sendlib.c: Add $wrap_headers. Closes
+	#3135
+
+2009-07-07 12:53 +0200  Rocco Rutte  <pdmef@gmx.net>  (0980cdb206d2)
+
+	* doc/manual.xml.head: Manual: mention terminal setup for
+	charsets, more unicode pros.
+
+	Closes #3292.
+
 2009-07-06 15:28 +0200  Rocco Rutte  <pdmef@gmx.net>  (ccab6c56b557)
 
 	* doc/manual.xml.head: Manual: Add a note about when/why to use utf-8
